fix: renaming schema fields, query & param
